--- a/.github/workflows/build-and-publish-wheels.yml
+++ b/.github/workflows/build-and-publish-wheels.yml
@@ -20,18 +20,18 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.12
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: 3.11
 
       - name: Build wheel
-        run: python3.12 -m pip wheel . --no-deps --wheel-dir wheels
+        run: python3.11 -m pip wheel . --no-deps --wheel-dir wheels
 
       - uses: actions/upload-artifact@v4
         with:
-          name: pytgcalls-wheel
-          path: ./wheels/py_tgcalls*.whl
+          name: pytgcalls_hikka-wheel
+          path: ./wheels/py_tgcalls_hikka*.whl
           if-no-files-found: error
 
       - name: Publish a Python distribution to PyPI.
