--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,7 +13,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ master, pytgcalls ]
+    branches: [ master, pytgcalls_hikka ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ master ]
