--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ classifiers = [
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12',
 ]
 authors = [
     {name = "Laky-64", email = "iraci.matteo@gmail.com"},
@@ -22,7 +21,7 @@ keywords = [
     "audio", "python", "library", "video", "telegram", "stream",
     "ffmpeg", "cpp", "webrtc", "voice-chat", "voip", "group-chat",
     "video-calls", "calls", "video-chat", "pytgcalls", "ntgcalls",
-    "tgcalls", "py-tgcalls", "pyrogram", "telethon", "hydrogram"
+    "tgcalls", "py-tgcalls", "pyrogram", "telethon"
 ]
 requires-python = ">=3.8"
 dependencies = [
@@ -36,11 +35,11 @@ dependencies = [
 [project.optional-dependencies]
 pyrogram = ["pyrogram>=1.2.20"]
 telethon = ["telethon>=1.24.0"]
-hydrogram = ["hydrogram>=0.1.4"]
+nodejs = ["nodejs>=18.0.0"]
 
 [project.urls]
 Homepage = "https://pytgcalls.github.io/"
-Repository = "https://github.com/pytgcalls/pytgcalls.git"
+Repository = "https://github.com/pussyklller/pytgcalls_hikka.git"
 Documentation = "https://pytgcalls.github.io/PyTgCalls"
 Changelog = "https://pytgcalls.github.io/PyTgCalls/Changelogs"
 
@@ -51,4 +50,4 @@ include-package-data = true
 requires = ["setuptools >= 69.2.0", "wheel >= 0.43.0"]
 
 [tool.setuptools.packages.find]
-include = ["pytgcalls*"]
+include = ["pytgcalls_hikka*"]
