--- a/.github/workflows/build-and-publish-wheels.yml
+++ b/.github/workflows/build-and-publish-wheels.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: pytgcalls_hikka-wheel
-          path: ./wheels/py_tgcalls_hikka*.whl
+          path: ./wheels/pytgcalls_hikka*.whl
           if-no-files-found: error
 
       - name: Publish a Python distribution to PyPI.
